Updated trophy room button to repair out of bounds issue

--- a/src/styles/less/ChildDashboard.less
+++ b/src/styles/less/ChildDashboard.less
@@ -142,22 +142,15 @@
     }
   }
   .trophy-room-button {
+    background: url('../../assets/images/gamemodeimg/explosion.png') no-repeat;
+    background-size: contain;
+    background-position: center;
+    background-color: @bright-sun;
+    opacity: 100%;
+    cursor: pointer;
     display: flex;
-    flex-direction: column;
-    justify-content: center;
     align-items: center;
-    background: @bright-sun;
-  }
-
-  .trophy-room-button img {
-    position: relative;
-
-  }
-
-  .trophy-room-button p {
-    position: absolute;
-    z-index: 1;
-
+    justify-content: center;
   }
 
   .multi-btn {
@@ -274,11 +267,6 @@
 
 .trophy-room:hover {
   opacity: 100%;
-
-  img {
-    max-width: 100%;
-    max-height: 100%;
-  }
 }
 
 .leaderboard:hover {
@@ -293,8 +281,7 @@
 .trophy-room-button:hover {
   opacity: 75%;
 
-  img {
-    max-width: 100%;
-    max-height: 100%;
+  p {
+    font-size: 4.5rem;
   }
 }
